framec_tests/language_specific/java/v3_facade_smoke/negative/strict_unfinished_generic.frm
@target java

system S {
    machine:
        $A {
            e() {
                -> $B();
                List<String x; // missing '>'
            }
        }
        $B {
        }
}

